--- a/index.html
+++ b/index.html
@@ -179,15 +179,14 @@
     .cv-project-tags .tag{font-size:.72rem; padding:4px 8px}
     @media (max-width:640px){ .cv-row{grid-template-columns:1fr; gap:4px} }
 
-    /* Research & Projects: title accent, bullets normal */
+    /* Research & Projects: title accent, bullets normal, line after each */
     .research-panel{padding:24px 28px}
-    .research-item{margin-bottom:20px}
-    .research-item:last-child{margin-bottom:0}
-    .research-title{margin:0 0 8px; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
+    .research-item{margin-bottom:0; padding-bottom:20px; border-bottom:2px solid color-mix(in oklab, var(--text) 15%, transparent)}
+    .research-item:last-child{padding-bottom:0; border-bottom:none}
+    .research-panel .research-title{margin:0 0 8px; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .research-bullets{margin:0; padding-left:1.25em; list-style:none}
     .research-bullets li{margin:.4em 0; font-size:.95rem; line-height:1.55; color:var(--text); position:relative}
     .research-bullets li::before{content:'* '; position:absolute; left:-1.25em}
-    .research-divider{border:0; border-top:2px solid color-mix(in oklab, var(--text) 15%, transparent); margin:24px 0}
 
     /* Skills: bold category + comma-separated items, same color */
     .skills-panel{padding:24px 28px}
@@ -202,16 +201,19 @@
     .cert-panel .cert-title{margin:0; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .cert-year{margin:0; font-family:var(--font); font-weight:700; font-size:1rem; color:var(--text)}
     .cert-desc{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
-    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:220px}
-    .cert-viewer-panel .cert-iframe{flex:1; width:100%; min-height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none}
+    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:220px; scrollbar-width:none}
+    .cert-viewer-panel::-webkit-scrollbar{display:none}
+    .cert-viewer-panel .cert-iframe{flex:1; width:calc(100% + 18px); max-width:calc(100% + 18px); min-height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none; margin-right:-18px}
     .cert-modal{position:fixed; inset:0; z-index:2000; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; padding:20px}
     .cert-modal.open{display:flex}
     .cert-modal-backdrop{position:absolute; inset:0}
-    .cert-modal-inner{position:relative; background:var(--panel); border:1px solid color-mix(in oklab, var(--text) 12%, transparent); border-radius:var(--radius); overflow:hidden; max-width:95vw; max-height:90vh; width:700px}
+    .cert-modal-inner{position:relative; background:var(--panel); border:1px solid color-mix(in oklab, var(--text) 12%, transparent); border-radius:var(--radius); overflow:hidden; max-width:95vw; width:700px; display:flex; flex-direction:column; align-items:stretch}
     .cert-modal-close{position:absolute; top:8px; right:8px; z-index:2; width:36px; height:36px; border:0; border-radius:var(--radius); background:var(--panel); color:var(--text); cursor:pointer; font-size:1.2rem; line-height:1; box-shadow:var(--shadow)}
     .cert-modal-close:hover{background:color-mix(in oklab, var(--text) 15%, transparent)}
     .cert-modal-close:focus{outline:2px solid var(--accent)}
-    .cert-modal iframe{display:block; width:100%; height:85vh; min-height:400px; border:0}
+    .cert-modal-inner iframe{display:block; width:100%; height:72vh; min-height:380px; max-height:72vh; border:0; flex-shrink:0}
+    .cert-modal-inner{scrollbar-width:none}
+    .cert-modal-inner::-webkit-scrollbar{display:none}
     @media (max-width:700px){ .cert-row{grid-template-columns:1fr} .cert-viewer-panel .cert-iframe{min-height:200px} }
 
     form .row{display:grid; gap:12px; grid-template-columns:1fr 1fr}
@@ -436,7 +438,6 @@
               <li>Tools & Technologies: MERN Stack (MongoDB, Express.js, React, Node.js), JWT authentication, RESTful APIs.</li>
             </ul>
           </article>
-          <hr class="research-divider" />
           <article class="research-item">
             <h3 class="research-title">CampusOrbit - All-in-One Student Engagement System</h3>
             <ul class="research-bullets">
