--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 
     /* Research & Projects: title accent, bullets normal, line after each */
     .research-panel{padding:24px 28px}
-    .research-item{margin-bottom:0; padding-bottom:32px; border-bottom:2px solid color-mix(in oklab, var(--text) 15%, transparent)}
+    .research-item{margin-bottom:0; padding-top:28px; padding-bottom:12px; border-bottom:2px solid color-mix(in oklab, var(--text) 15%, transparent)}
+    .research-item:first-child{padding-top:0}
     .research-item:last-child{padding-bottom:0; border-bottom:none}
     .research-panel .research-title{margin:0 0 8px; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .research-bullets{margin:0; padding-left:1.25em; list-style:none}
@@ -202,9 +203,9 @@
     .cert-panel .cert-title{margin:0; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .cert-year{margin:0; font-family:var(--font); font-weight:700; font-size:1rem; color:var(--text)}
     .cert-desc{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
-    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:220px; scrollbar-width:none}
+    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:200px; scrollbar-width:none}
     .cert-viewer-panel::-webkit-scrollbar{display:none}
-    .cert-viewer-panel .cert-iframe{flex:1; width:calc(100% + 18px); max-width:calc(100% + 18px); min-height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none; margin-right:-18px}
+    .cert-viewer-panel .cert-iframe{flex:1; width:calc(100% + 18px); max-width:calc(100% + 18px); min-height:200px; height:200px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none; margin-right:-18px}
     .cert-modal{position:fixed; inset:0; z-index:2000; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; padding:20px}
     .cert-modal.open{display:flex}
     .cert-modal-backdrop{position:absolute; inset:0}
@@ -212,7 +213,7 @@
     .cert-modal-close{position:absolute; top:8px; right:8px; z-index:2; width:36px; height:36px; border:0; border-radius:var(--radius); background:var(--panel); color:var(--text); cursor:pointer; font-size:1.2rem; line-height:1; box-shadow:var(--shadow)}
     .cert-modal-close:hover{background:color-mix(in oklab, var(--text) 15%, transparent)}
     .cert-modal-close:focus{outline:2px solid var(--accent)}
-    .cert-modal-inner iframe{display:block; width:100%; height:72vh; min-height:380px; max-height:72vh; border:0; flex-shrink:0}
+    .cert-modal-inner iframe{display:block; width:100%; height:62vh; min-height:320px; max-height:62vh; border:0; flex-shrink:0}
     .cert-modal-inner{scrollbar-width:none}
     .cert-modal-inner::-webkit-scrollbar{display:none}
     @media (max-width:700px){ .cert-row{grid-template-columns:1fr} .cert-viewer-panel .cert-iframe{min-height:200px} }
@@ -489,15 +490,12 @@
         <div class="panel research-panel">
           <article class="research-item">
             <h3 class="research-title">Reading</h3>
-            <p class="research-desc">Books that inspire me.</p>
           </article>
           <article class="research-item">
             <h3 class="research-title">Music</h3>
-            <p class="research-desc">Listening and discovering new artists.</p>
           </article>
           <article class="research-item">
             <h3 class="research-title">Sports / Fitness</h3>
-            <p class="research-desc">Keep active and healthy.</p>
           </article>
         </div>
       </div>
