--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
     .cert-panel .cert-title{margin:0; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .cert-year{margin:0; font-family:var(--font); font-weight:700; font-size:1rem; color:var(--text)}
     .cert-desc{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
-    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:200px; scrollbar-width:none}
+    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:200px; scrollbar-width:none; position:relative}
     .cert-viewer-panel::-webkit-scrollbar{display:none}
-    .cert-viewer-panel .cert-iframe{flex:1; width:calc(100% + 18px); max-width:calc(100% + 18px); min-height:200px; height:200px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none; margin-right:-18px}
+    .cert-viewer-panel .cert-iframe{flex:1; width:calc(100% + 30px); max-width:none; min-height:200px; height:200px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none; margin-right:-30px; position:relative}
     .cert-modal{position:fixed; inset:0; z-index:2000; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; padding:20px}
     .cert-modal.open{display:flex}
     .cert-modal-backdrop{position:absolute; inset:0}
