about me edited

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     .hero .intro{padding:32px 36px}
     .kicker{font-weight:500; color:var(--muted); text-transform:uppercase; letter-spacing:.2em; font-size:.8rem}
     h1{font-family:var(--font); font-size: clamp(28px, 4vw, 42px); line-height:1.2; margin:.4em 0 .5em; font-weight:700; letter-spacing:-.02em; color:var(--text)}
-    .tagline{font-size:1rem; color:var(--muted); font-weight:400; line-height:1.65; max-width:32ch}
+    .tagline{font-size:1rem; color:var(--muted); font-weight:400; line-height:1.5; max-width:56ch; letter-spacing:.01em}
     .cta{display:flex; flex-wrap:wrap; gap:10px; margin-top:24px}
     .btn{
       display:inline-flex; align-items:center; gap:8px; border:1px solid transparent; text-decoration:none;
@@ -317,7 +317,7 @@
         <div class="card intro">
           <div class="kicker">Hey There! I'm</div>
           <h1 id="hero-title">S M Mahidur Rahman</h1>
-          <p class="tagline">Computer Science Graduate | AI/ML Researcher | Progressive Learner</p>
+          <p class="tagline">Computer Science Graduate | AI/ML Researcher | Multimodal Deep Learning | Computer Vision & Predictive Modeling</p>
 
           <div class="chip-row" aria-label="Highlights">
             <span class="chip">Student</span>
